# api_elasticsearch

./: .gitignore  README.md  docker-compose.yml  logger.py  main.py  pyproject.toml  teste_elastic.py
db/: conection.py
router/: search_schemas.py  searchs.py
