[tool.poetry]
name = "api_elasticsearch"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
Jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
aiofile = "^3.8.8"
elasticsearch-dsl = "^8.12.0"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
